adjusted links to partners and logos of partners

--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
           <a href="https://dtek.com/our_business/modus-x/" target="_blank">
             <img src="img/partners/modus-x.svg" alt="Modus X" />
           </a>
-          <a href="https://www.logitech.com/" target="_blank">
+          <a href="https://www.logitech.com.ua/" target="_blank">
             <img src="img/partners/logitech.svg" alt="Logitech" />
           </a>
           <a href="https://evo.company/" target="_blank">
@@ -367,10 +367,10 @@
           <a href="https://www.skelar.tech/" target="_blank">
             <img src="img/partners/skelar.svg" alt="Skelar" />
           </a>
-          <a href="https://dom.ria.com/uk/" target="_blank">
+          <a href="https://dom.ria.com/uk/novostroyki/" target="_blank">
             <img src="img/partners/dim-ria.svg" alt="DIM RIA" />
           </a>
-          <a href="https://futurragroup.com/" target="_blank">
+          <a href="https://futurragroup.com/ua" target="_blank">
             <img src="img/partners/futura-group.svg" alt="Futura group" />
           </a>
         </div>
@@ -378,7 +378,10 @@
           <a href="https://www.sombrainc.com/" target="_blank">
             <img src="img/partners/sombra.svg" alt="Sombra" />
           </a>
-          <a href="https://supportyourapp.com/" target="_blank">
+          <a
+            href="https://supportyourapp.com/?utm_source=media&utm_medium=referral&utm_campaign=hackathon&utm_content=1"
+            target="_blank"
+          >
             <img
               src="img/partners/support-your-app.svg"
               alt="Support your app"
@@ -390,10 +393,7 @@
           <a href="https://reprezent.us/" target="_blank">
             <img src="img/partners/reprezent.svg" alt="Reprezent" />
           </a>
-          <a
-            href="https://jobs.dou.ua/companies/unicorn-systems-ua/vacancies/"
-            target="_blank"
-          >
+          <a href="https://unicorn.com/en/" target="_blank">
             <img src="img/partners/unicorn.svg" alt="Unicorn" />
           </a>
           <a href="https://tv7.studio/en/" target="_blank">
