added new barter partners

--- a/index.html
+++ b/index.html
@@ -64,10 +64,6 @@
       ></iframe
     ></noscript>
     <!-- End Google Tag Manager (noscript) -->
-    <header class="header__timer">
-      <p class="header__title">До початку хакатону:</p>
-      <p id="timer" class="header__time"></p>
-    </header>
 
     <div class="container header">
       <div class="header__row">
@@ -404,9 +400,26 @@
           <a href="https://ua.jooble.org/" target="_blank">
             <img src="img/partners/jooble.svg" alt="Jooble" />
           </a>
+          <a href="https://ithillel.ua/" target="_blank">
+            <img src="img/partners/hilel.svg" alt="hillel IT School" />
+          </a>
+          <a href="https://www.instagram.com/ya.vereta/" target="_blank">
+            <img src="img/partners/yavereta.svg" alt="Yavereta" />
+          </a>
           <a href="https://happymonday.ua/en" target="_blank">
             <img src="img/partners/happy-monday.svg" alt="Happy Monday" />
           </a>
+          <a href="https://burunduk.in.ua/" target="_blank">
+            <img src="img/partners/burunduk.svg" alt="Burunduk" />
+          </a>
+          <a href="https://www.easydrive.com.ua/" target="_blank">
+            <img src="img/partners/easy-drive.svg" alt="Easy drive" />
+          </a>
+          <a href="https://g-tea.co.uk/ua/" target="_blank">
+            <img src="img/partners/g-tea.svg" alt="g'tea!" />
+          </a>
+        </div>
+        <div class="partners__rest">
           <a href="https://best-kyiv.org/" target="_blank">
             <img src="img/partners/best.svg" alt="BEST" />
           </a>
